Bug #234804,234976  --> Installers are crashing on launch, trying to install deflenus.xpi

r/sr=darin